--- a/static/components/outline-view.less
+++ b/static/components/outline-view.less
@@ -71,15 +71,17 @@
     color: @text-color-subtle;
     flex: 1;
     display: flex;
-    img.content-mask {
-      background-color: @text-color-subtle;
-      vertical-align: text-bottom;
-    }
+    align-items: baseline;
     font-size: @font-size-small;
     font-weight: 400;
     padding-right: @spacing-standard;
     line-height: @line-height-large * 1.1;
     clear: both;
+
+    img.content-mask {
+      background-color: @text-color-subtle;
+      vertical-align: text-bottom;
+    }
 
     .icon {
       flex-shrink: 0;
@@ -88,11 +90,7 @@
     .name {
       order: 2;
       padding-left: @padding-small-horizontal * 0.85;
-      position:relative;
-      top:1px;
       overflow: hidden;
-      padding-top: @padding-small-vertical;
-      padding-bottom:@padding-small-vertical;
       line-height: @line-height-small;
       text-overflow: ellipsis;
     }
@@ -103,7 +101,6 @@
       color: @count-color;
       margin-left: @padding-small-horizontal * 0.8;
       box-shadow: 0 0.5px 0 @count-color, 0 -0.5px 0 @count-color, 0.5px 0 0 @count-color, -0.5px 0 0 @count-color;
-
     }
     .item-count-box.alt-count {
       color: @source-list-active-bg;
